0.12 200911xx
    o Renamed to ::Firefox
    . Added ->save_url for downloading content to disk
    . Added ->save_document for downloading the current document to disk
    . Make ->synchronize and ->click not automatically fetch the response

0.11 20091126
    . Implement real HTTP response codes instead of the faked
      response codes.
    * Fix a memory leak/cycle that prevented tabs from closing
    . Now needs MozRepl::RemoteObject 0.10 for the API to deregister
      callbacks.

0.10 200911xx
    . implemented ->form_name, ->form_id, ->form_number
    . unified API between ->find_link, ->selector, ->xpath
    . Needs MozRepl::RemoteObject 0.09 to ensure that
      multiple $mech instances work
    
0.09 20091111
    . Allow ->eval_in_page() to specify an overriding
      environment, for example to override alert()

0.08 20091109
    . Make tests warn if I suspect that Javascript is
      blocked by Noscript. This makes some tests fail.
    . Require latest MozRepl::RemoteObject for sane encoding handling.

0.07 20091106
    . added ->eval_in_page() to evaluate Javascript in
      the context of the page
    . added better frame / iframe handling.
    o Frame/iframes don't play well with data: URLs.

0.06 20091102
    . added 'autoclose' parameter to specify whether the
      tab that mechanize creates gets automatically closed upon
      object release
    . added ->content_as_png() to save the current page
      as PNG
    . Added 'single' option to ->selector() and ->xpath()
    . Added capture of arbitrary rectangles to ->content_as_png()
    . added ->find_link APIs
    . added ->find_link tests from WWW::Mechanize
    . added sending of focus/change/blur events and API

0.05 20091030
    . Added HTTP::Cookies::MozRepl to allow for live cookie querying
    . Added ->cookies method for cookie access

0.04 20091029
    . Added ->set_visible
    . Added ->value (partly buggy with respect to event triggering)
    . added log passthrough parameter
