@@ -1,5 +1,6 @@
 0.12 200911xx
-    o Renamed to ::Firefox
+    ! Renamed to ::Firefox
+      This affects all your scripts, unfortunately.
     . Added ->save_url for downloading content to disk
     . Added ->save_document for downloading the current document to disk
     . Make ->synchronize and ->click not automatically fetch the response
